--- a/TALLER NO.2/DocProyecto.Rmd
+++ b/TALLER NO.2/DocProyecto.Rmd
@@ -120,6 +120,49 @@ $$
 Grafique su solución y compare con la solución exacta, cuál es el error de truncamiento en cada paso
 
 
+```{r}
+
+metodoEuler <- function(f, h, xi, yi, xf)
+{
+  N = (xf - xi) / h
+  x = y = numeric(N+1)
+  x[1] = xi; 
+  y[1] = yi;
+  i = 1
+  while (i <= N)
+  {
+    x[i+1] = x[i]+h
+    y[i+1] = y[i]+(h*f(x[i],y[i]))
+    i = i+1
+  }
+  return (data.frame(X = x, Y = y))
+}
+
+funcion3punto <- function(x,y) { exp(x) * (x^2* exp(-x) + x* exp(-x) + 1)}
+
+e1 = metodoEuler(f, 0.1, 0, 1, 2)
+
+e1[nrow(e1),]
+
+par(mfrow = c(1,2))
+
+xx <- c(-3, 3); yy <- c(-1, 1)
+vectorfield(f, xx, yy, scale = 0.1)
+for (xs in seq(-1, 1, by = 0.25)) 
+{
+  sol <- rk4(f, -1, 1, xs, 100)
+  lines(sol$x, sol$y, col="purple")
+}
+title(main="Campo Vectorial", col.main="black", font.main=4)
+
+plot(e1, col = "darkblue", main = "Grafica")
+
+
+```
+
+
+
+
 ## PUNTO #4
 
 Implemente en R el siguiente algoritmo y aplíquelo para resolver la ecuación anterior
@@ -164,7 +207,7 @@ Utilizar la siguiente variación en el método de Euler, para resolver una ecuac
 
 $$
 
-y_i+{1 =} y_i + h/2 f((x_i,y_i) + f(x_i+{1, }y_i+{1) })
+y_{i+1} = y_i + h/2 f((x_i,y_i) + f(x_{i+1}, y_{i+1}) )
 
 $$
 
