--- a/TALLER NO.2/DocProyecto.Rmd
+++ b/TALLER NO.2/DocProyecto.Rmd
@@ -4,6 +4,7 @@ author: "Kevin Pelaez - Juan Diego Osorio"
 date: "28 de octubre de 2018"
 output:
   pdf_document: default
+  word_document: default
   html_document:
     df_print: paged
     theme: journal
